--- a/Starbloom/Packages/manifest.json
+++ b/Starbloom/Packages/manifest.json
@@ -1,4 +1,6 @@
 {
-	"dependencies": {
-	}
+  "dependencies": {
+    "com.unity.probuilder": "3.0.8",
+    "com.unity.progrids": "3.0.2-preview"
+  }
 }
