--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@ Starbloom/Assets/TENKOKU - DYNAMIC SKY/EFFECTS/Textures/mat_fx_rain.mat
 Starbloom/Assets/TENKOKU - DYNAMIC SKY/EFFECTS/Textures/mat_fx_rainFog.mat
 Starbloom/Assets/TENKOKU - DYNAMIC SKY/EFFECTS/Textures/mat_fx_rainSplash.mat
 Starbloom/Assets/TENKOKU - DYNAMIC SKY/EFFECTS/Textures/mat_fx_snow.mat
+Starbloom/UserSettings/
+Starbloom/SaveFiles/
