Set-up the new Crops

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@ Starbloom/Assets/TENKOKU - DYNAMIC SKY/EFFECTS/Textures/mat_fx_rainSplash.mat
 Starbloom/Assets/TENKOKU - DYNAMIC SKY/EFFECTS/Textures/mat_fx_snow.mat
 Starbloom/UserSettings/
 Starbloom/SaveFiles/
+Starbloom/Build/
+Starbloom/obj/
